# BD_Lab03

./: README.md  pyproject.toml
src/bd_spark/: A2_script.py  A3_script.py  A4_script.py  B1.ipynb  __init__.py  custom_functions.py  main.ipynb
src/bd_spark/datasets/cultural-sites/: 2023-04-20.csv
src/bd_spark/datasets/incidences/: 2014_Peticions_ciutadanes.csv  2015_Peticions_ciutadanes.csv  2016_Peticions_ciutadanes.csv  2017_Peticions_ciutadanes.csv  2018_Peticions_ciutadanes.csv  2019_Peticions_ciutadanes.csv  2020_IRIS_Peticions_Ciutadanes_OpenData.csv  2021_IRIS_Peticions_Ciutadanes_OpenData.csv  2022_IRIS_Peticions_Ciutadanes_OpenData.csv
src/bd_spark/docs/: Lab3-Assignment-Statement.docx
src/bd_spark/zones/exploitation_zone/idealista/: .part-00000-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00001-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00002-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00003-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00004-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00005-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00006-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  .part-00007-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet.crc  part-00000-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet  part-00001-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet  part-00002-fd79ca66-0cd3-440c-8c83-2833ba661669-c000.snappy.parquet  (+5 more)
(+452 files in other folders)
