[project]
name = "bd-spark"
version = "0.1.0"
description = ""
authors = [
    {name = "MatiasBorrellH",email = "matias.borrell@bse.eu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pyspark (>=4.0.0,<5.0.0)",
    "spark (>=0.2.1,<0.3.0)",
    "findspark (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bd_spark", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
